# dsa-study-packet

./: .bazelignore  .bazelrc  .bazelrc.flywheel  .env.example  .envrc  .gitignore  404.html  AGENTS.md  BUILD.bazel  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODULE.bazel  README.md  RESEARCH.md  SECURITY.md  STUDY_PLAN.md  TRACK-CONTRACT.md  WELCOME.md  algorithm-interview-resources.md  algorithms-and-data-structures.py  cliff.toml  flake.nix  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.agents/skills/: interviewer  practice-day
.claude/: settings.json
.codex/: config.toml
.devcontainer/: devcontainer.json  launch-agent.sh  setup.sh  welcome.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  idea.yml
.github/agents/: interviewer.agent.md
.github/hooks/: README.md  candidate-workspace-guard.json
.github/prompts/: clarp.prompt.md  comments.prompt.md  continue.prompt.md  reacto.prompt.md  umpire.prompt.md
.github/workflows/: ci.yml  devcontainer.yml  docs.yml  release.yml
.serena/: project.yml
SUMMARY/: index.html
algorithms/: index.html
algorithms/arrays/: index.html
algorithms/backtracking/: index.html
algorithms/bit_manipulation/: index.html
algorithms/dp/: index.html
algorithms/graphs/: index.html
algorithms/greedy/: index.html
algorithms/heaps/: index.html
algorithms/linked_lists/: index.html
algorithms/patterns/: index.html
algorithms/recursion/: index.html
algorithms/searching/: index.html
algorithms/sliding_window/: index.html
algorithms/sorting/: index.html
algorithms/stacks_queues/: index.html
algorithms/strings/: index.html
algorithms/trees/: index.html
algorithms/two_pointers/: index.html
challenges/: index.html
challenges/progress/: index.html
concepts/: index.html
concepts/advanced-typing/: index.html
concepts/benchmarking/: index.html
concepts/fft-dct/: index.html
concepts/hypothesis-patterns/: index.html
concepts/modern-flask/: index.html
concepts/t-strings/: index.html
concepts/validation/: index.html
docs/: CNAME  SUMMARY.md  index.md  printables.md
docs/algorithms/: index.md
docs/challenges/: index.md
docs/concepts/: advanced-typing.md  benchmarking.md  fft-dct.md  hypothesis-patterns.md  index.md  modern-flask.md  t-strings.md  validation.md
docs/guide/: .meta.yml  authoring-and-overlay-architecture.md  getting-started.md  interview-practice-evidence.md  learning-paths.md  local-practice.md  source-of-truth.md  when-to-use-what.md
docs/practice/: index.md
docs/reference/: .meta.yml  01-python-stdlib.md  02-data-structures.md  03-algorithm-templates.md  03-python-314.md  04-big-o-complexity.md  05-common-patterns.md  06-system-design.md  07-interview-day-guide.md  08-cross-reference-guide.md  09-python-314-and-modern-patterns.md  10-whiteboard-performance-protocol.md  11-14-day-whiteboard-ramp.md  index.md
examples/overlay-demo/: BUILD.bazel  back_matter.tex  front_matter.tex  preamble.tex  study_packet_example.tex
guide/source-of-truth/: index.html
guide/when-to-use-what/: index.html
practice/: index.html
reference/: index.html
reference-sheets/: 01-python-stdlib.md  02-data-structures.md  03-algorithm-templates.md  03-python-314-and-modern-patterns.md  04-big-o-complexity.md  05-common-patterns.md  06-system-design.md  07-interview-day-guide.md  08-cross-reference-guide.md  09-python-314-and-modern-patterns.md  10-whiteboard-performance-protocol.md  11-14-day-whiteboard-ramp.md  appendix-topics.json
reference/01-python-stdlib/: index.html
reference/02-data-structures/: index.html
reference/03-algorithm-templates/: index.html
reference/03-python-314/: index.html
reference/04-big-o-complexity/: index.html
reference/05-common-patterns/: index.html
reference/06-system-design/: index.html
reference/07-interview-day-guide/: index.html
reference/08-cross-reference-guide/: index.html
scripts/: catalog.py  check_agent_instructions.py  check_clarity.py  check_doc_counts.py  check_no_stubs.py  check_onboarding.py  check_public_boundary.py  core42.py  doctor.py  gen_agent_instructions.py  gen_algo_pages.py  gen_booklet.py  gen_progress_page.py  gen_traces.py  practice_day.py  practice_workspace.py  python_candidate_target.py  rep_schema.py  scaffold_status.py  strip_solution.py  study_schedule.py  validate_appendix_schema.py  wait_for_save.py
scripts/hooks/: guard_pretooluse.py
search/: search_index.json
src/concepts/: advanced_typing.py  benchmarking.py  fft_dct.py  hypothesis_patterns.py  modern_flask.py  t_strings.py  validation.py
tests/: booklet_pdf_smoke.sh  test_catalog.py  test_check_clarity.py  test_check_onboarding.py  test_check_public_boundary.py  test_codespaces_config.py  test_doc_generators.py  test_doctor.py  test_gen_agent_instructions.py  test_hooks_guard.py  test_justfile_security.py  test_practice_day.py  test_practice_workspace.py  test_python_candidate_target.py  test_remote_frontdoor.py  test_rep_schema.py  test_scaffold.py  test_strip_solution.py  test_study_schedule.py  test_traces.py
tests/arrays/: test_group_anagrams.py  test_product_except_self.py  test_top_k_frequent.py  test_two_sum.py
tests/backtracking/: test_combination_sum.py  test_n_queens.py  test_permutations.py  test_subsets.py
tests/bit_manipulation/: test_counting_bits.py  test_reverse_bits.py  test_single_number.py
tests/concepts/: test_advanced_typing.py  test_benchmarking.py  test_fft_dct.py  test_hypothesis_patterns.py  test_modern_flask.py  test_t_strings.py  test_validation.py
tests/dp/: test_climbing_stairs.py  test_coin_change.py  test_constraint_satisfaction.py  test_edit_distance.py  test_knapsack.py  test_longest_common_subseq.py  test_longest_increasing_subseq.py  test_traveling_salesman_dp.py
tests/graphs/: test_a_star_search.py  test_bellman_ford.py  test_clone_graph.py  test_course_schedule.py  test_dijkstra.py  test_geohash_grid.py  test_kd_tree.py  test_minimum_spanning_tree.py  test_network_delay_time.py  (+4 more)
(+280 files in other folders)
