[project]
name = "dsa-study-packet"
version = "0.1.0"
description = "Company-neutral DSA and technical interview study guide"
requires-python = ">=3.14"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "jsullivan2" }]

dependencies = [
    "scipy-stubs~=1.17.1",
]

[project.optional-dependencies]
concepts = [
  "numpy>=2.0",
  "scipy>=1.14",
  "flask>=3.0",
  "pydantic>=2.9",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.6",
  "mkdocstrings[python]>=0.27",
  "mkdocs-awesome-pages-plugin>=2.10",
  "mkdocs-gen-files>=0.5",
  "mkdocs-literate-nav>=0.6",
  "mkdocs-section-index>=0.3",
]
dev = [
  "pytest>=8.3",
  "pytest-benchmark>=5.1",
  "pytest-cov>=5.0",
  "pytest-xdist>=3.5",
  "hypothesis>=6.115",
  "mypy>=1.13",
  "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/algo", "src/concepts"]

# --------------------------------------------------------------------------- #
# pytest
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "-ra",
  "-q",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "bench: benchmark tests",
]
filterwarnings = ["error"]

# --------------------------------------------------------------------------- #
# hypothesis
# --------------------------------------------------------------------------- #
[tool.hypothesis]
settings = { max_examples = 200, deadline = 1000 }

# --------------------------------------------------------------------------- #
# coverage
# --------------------------------------------------------------------------- #
[tool.coverage.run]
branch = true
source = ["src/algo", "src/concepts"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "\\.\\.\\.",
]

# --------------------------------------------------------------------------- #
# mypy — strict mode
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
explicit_package_bases = true
enable_error_code = [
  "ignore-without-code",
  "redundant-cast",
  "truthy-bool",
  "truthy-iterable",
]
mypy_path = "src"
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "practice.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["numpy", "numpy.*", "scipy", "scipy.*", "flask", "flask.*", "pydantic", "pydantic.*"]
ignore_missing_imports = true

# Concept modules with optional deps: decorators become untyped when deps not installed.
[[tool.mypy.overrides]]
module = ["concepts.modern_flask", "concepts.validation"]
disallow_untyped_decorators = false
disallow_subclassing_any = false
warn_return_any = false

# mypy does not yet support PEP 750 t-string literals (t"...") in source or tests.
[[tool.mypy.overrides]]
module = [
  "concepts.benchmarking",
  "tests.concepts.test_t_strings",
  "tests.concepts.test_benchmarking",
]
ignore_errors = true

# hypothesis.stateful stubs are incomplete (run_state_machine_as_test is untyped).
[[tool.mypy.overrides]]
module = "tests.concepts.test_hypothesis_patterns"
disallow_untyped_calls = false

# --------------------------------------------------------------------------- #
# ruff
# --------------------------------------------------------------------------- #
[tool.ruff]
target-version = "py314"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "F",     # pyflakes
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "I",     # isort
  "N",     # pep8-naming
  "UP",    # pyupgrade
  "B",     # flake8-bugbear
  "A",     # flake8-builtins
  "C4",    # flake8-comprehensions
  "SIM",   # flake8-simplify
  "TCH",   # flake8-type-checking
  "RUF",   # ruff-specific rules
  "PT",    # flake8-pytest-style
  "RET",   # flake8-return
  "ARG",   # flake8-unused-arguments
  "ERA",   # eradicate (commented-out code)
]
ignore = [
  "E501",   # line length handled by formatter
  "TC003",  # PEP 649 lazy annotations — not worth the verbosity in a study project
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "ARG002", "PT011"]

[tool.ruff.lint.isort]
known-first-party = ["algo", "concepts"]

[tool.ruff.format]
docstring-code-format = true
